--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kidney-swap",
   "version": "0.1.0",
+  "homePage": "/go/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -12,6 +13,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
+    "country-city": "^1.0.0",
     "firebase": "^10.11.1",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
