--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-use": "^17.5.0",
     "styled-components": "^6.1.9",
+    "sweetalert2": "^11.10.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
